<resources>
    <string name="app_name">Campus Expo</string>
    <string name="nama_kampus">Nama Kampus</string>
    <string name="short_description">Short Description</string>
    <string name="campus_photo">campus photo</string>
    <string name="campus_logo">campus logo</string>
    <string name="nama_kampus_example">Nama Kampus</string>
    <string name="lokasi_kampus">Lokasi Kampus</string>
    <string name="detail_kampus">Detail Kampus</string>
    <string name="about_page">About</string>
    <string name="author">Ahmd Mufahras Li Alfazh Assardew</string>
    <string name="email_author">alfazh291@gmail.com</string>
    <string name="share_label">Share</string>
    <string name="back_button">Back</string>
    <string-array name="data_campus_name">
        <item>Universitas Negeri Surabaya</item>
        <item>Universitas Airlangga</item>
        <item>Universitas Pembangunan Nasional "Veteran" Jawa Timur</item>
        <item>Universitas 17 Agustus 1945 Surabaya</item>
        <item>Politeknik Perkalapan Negeri Surabaya</item>
        <item>Institut Teknologi Sepuluh Nopember</item>
        <item>Politeknik Semen Indonesia</item>
        <item>Universitas Islam Negeri Sunan Ampel</item>
        <item>Universitas Brawijaya</item>
        <item>Universitas Negeri Malang</item>
        <item>Universitas Diponegoro</item>
        <item>Universitas Gadjah Mada</item>
    </string-array>
    <string-array name="data_locatoin">
        <item>Surabaya, Jawa Timur</item>
        <item>Surabaya, Jawa Timur</item>
        <item>Surabaya, Jawa Timur</item>
        <item>Surabaya, Jawa Timur</item>
        <item>Surabaya, Jawa Timur</item>
        <item>Surabaya, Jawa Timur</item>
        <item>Gresik, Jawa Timur</item>
        <item>Surabaya, Jawa Timur</item>
        <item>Malang, Jawa Timur</item>
        <item>Malang, Jawa Timur</item>
        <item>Semarang, Jawa Tengah</item>
        <item>Yogyakarta, Indonesia</item>
    </string-array>
    <string-array name="data_short_desc">
        <item>Universitas Negeri Surabaya (Unesa) adalah perguruan tinggi negeri di Surabaya, Jawa Timur, Indonesia. Unesa merupakan hasil penggabungan antara Institut Keguruan dan Ilmu Pendidikan (IKIP) Surabaya dan Universitas Negeri Surabaya. Unesa berdiri pada 19 Desember 1964.</item>
        <item>Universitas Airlangga (Unair) adalah perguruan tinggi negeri di Surabaya, Jawa Timur, Indonesia. Unair didirikan pada tanggal 10 November 1954. Unair merupakan perguruan tinggi tertua di Jawa Timur.</item>
        <item>Universitas Pembangunan Nasional "Veteran" Jawa Timur (UPN "Veteran" Jawa Timur) adalah perguruan tinggi swasta di Surabaya, Jawa Timur, Indonesia. UPN "Veteran" Jawa Timur didirikan pada tanggal 10 November 1964.</item>
        <item>Universitas 17 Agustus 1945 Surabaya (Untag Surabaya) adalah perguruan tinggi swasta di Surabaya, Jawa Timur, Indonesia. Untag Surabaya didirikan pada tanggal 17 Agustus 1945.</item>
        <item>Politeknik Perkalapan Negeri Surabaya (Polinema) adalah perguruan tinggi negeri di Surabaya, Jawa Timur, Indonesia. Polinema didirikan pada tanggal 1 September 1982.</item>
        <item>Institut Teknologi Sepuluh Nopember (ITS) adalah perguruan tinggi negeri di Surabaya, Jawa Timur, Indonesia. ITS didirikan pada tanggal 10 November 1957.</item>
        <item>Politeknik Semen Indonesia (Polteksi) adalah perguruan tinggi swasta di Gresik, Jawa Timur, Indonesia. Polsemen didirikan pada tanggal 1 September 2014.</item>
        <item>Universitas Islam Negeri Sunan Ampel (UINSA) adalah perguruan tinggi negeri di Surabaya, Jawa Timur, Indonesia. Uinsa didirikan pada tanggal 10 November 1964.</item>
        <item>Universitas Brawijaya (UB) adalah perguruan tinggi negeri di Malang, Jawa Timur, Indonesia. UB didirikan pada tanggal 5 Januari 1963.</item>
        <item>Universitas Negeri Malang (UM) adalah perguruan tinggi negeri di Malang, Jawa Timur, Indonesia. UM didirikan pada tanggal 18 November 1954.</item>
        <item>Universitas Diponegoro (Undip) adalah perguruan tinggi negeri di Semarang, Jawa Tengah, Indonesia. Undip didirikan pada tanggal 8 Oktober 1957.</item>
        <item>Universitas Gadjah Mada (UGM) adalah perguruan tinggi negeri di Yogyakarta, Indonesia. UGM didirikan pada tanggal 19 Desember 1949.</item>
    </string-array>
</resources>